<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="app_name_screen">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="shareText">Привет! Посмотри этот курс по Android-разработке в Практикуме: https://practicum.yandex.ru/android-developer/</string>
    <string name="shareTitle">Поделиться через</string>
    <string name="extraSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="extraText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="sendTitle">Выберите почтовый клиент</string>
    <string name="email">senty.goldsun@gmail.com</string>
    <string name="agreementText">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="searchHint">Вы искали</string>
    <string name="searchClean">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="style">Жанр</string>
    <string name="country">Страна</string>
    <string name="timer">00:00</string>
    <string name="titleMedia">Медиатека</string>
    <string name="errorMessage">Ваша медиатека пуста</string>
    <string name="errorMessagePlaylist">Вы не создали\n ни одного плейлиста</string>
    <string name="createPlaylist">Новый плейлист</string>
    <string name="favourites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="titleNewPlaylist">Новый плейлист</string>
    <string name="hintName">Название*</string>
    <string name="hintDescription">Описание</string>
    <string name="create">Создать</string>
    <string name="alertTitle">Завершить создание плейлиста?</string>
    <string name="alertDescr">Все несохраненные данные будут потеряны</string>
    <string name="alertCancel">Отмена</string>
    <string name="alertClose">Завершить</string>
    <string name="playlist_created">Плейлист \"%s\" создан</string>
    <string name="playlist_updated">Плейлист \"%s\" обновлен</string>
    <string name="alert_title">Выход без сохранения</string>
    <string name="alert_description">Вы внесли изменения. Выйти без сохранения?</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Выйти</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="empty_playlist_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist_title">Поделиться плейлистом</string>
    <string name="track">трек</string>
    <string name="tracks">треков</string>
    <string name="tracks_genitive">трека</string>
</resources>