<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding"
    android:paddingTop="14dp"
    android:paddingBottom="28dp"
    tools:context=".MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_screen"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:textStyle="normal"
            app:cornerRadius="@dimen/padding"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/iconPadding"
            app:iconSize="@dimen/iconSize"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/media"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:textStyle="normal"
            app:cornerRadius="@dimen/padding"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/iconPadding"
            app:iconSize="@dimen/iconSize"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:textStyle="normal"
            app:cornerRadius="@dimen/padding"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/iconPadding"
            app:iconSize="@dimen/iconSize"
            app:iconTint="@color/black" />

    </LinearLayout>

</LinearLayout>