<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ModeSettingsScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="@dimen/padding"
        app:contentInsetStartWithNavigation="@dimen/bigPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrowback"
        app:title="@string/titleNewPlaylist"
        app:titleTextAppearance="@style/TopText" />

    <FrameLayout
        android:id="@+id/frameImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margine24"
        android:layout_marginTop="@dimen/margine26"
        android:background="@drawable/dash_new_playlist"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar">

        <ImageView
            android:id="@+id/imagePlaylist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/add_photo" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistName"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding"
        android:layout_marginTop="@dimen/margine26"
        android:hint="@string/hintName"
        android:textColorHint="@color/placeholderColor"
        app:boxStrokeColor="@color/stroke_color"
        app:boxStrokeWidthFocused="@dimen/dashWidth"
        app:hintTextAppearance="@style/customHint"
        app:hintTextColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/frameImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:maxLines="1"
            android:textAppearance="@style/editTextHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistDescription"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding"
        android:layout_marginTop="10dp"
        android:hint="@string/hintDescription"
        android:textColorHint="@color/placeholderColor"
        app:boxStrokeColor="@color/stroke_color"
        app:boxStrokeWidthFocused="@dimen/dashWidth"
        app:hintTextAppearance="@style/customHint"
        app:hintTextColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/playlistName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:maxLines="1"
            android:textAppearance="@style/editTextHint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/size44"
        android:layout_marginHorizontal="@dimen/margine17"
        android:layout_marginBottom="80dp"
        android:background="@drawable/create_button"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:letterSpacing="0"
        android:text="@string/create"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/smallText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>